refactor(bot): simplify — text blocks, method refs, dead code removal, Effect constants   Replace string concatenation with Java text blocks across all handlers and   BotMessageBuilder. Convert ctx-lambda wrappers in CallbackHandler to method   references. Use Math.clamp() and List.getFirst() where applicable.
  Remove HubMatcher.match() and its HubAliasRepository dependency (unused —
  only suggest() is called). Remove BotMessageBuilder.starRatingRows() (unused
  after rating buttons were inlined). Add Effect.java constants for Telegram
  message effect IDs (fire, confetti, sparkles, etc.) for future use.